--- a/manabe/templates/manabe/sidemenu.html
+++ b/manabe/templates/manabe/sidemenu.html
@@ -36,7 +36,7 @@
             </dt>
             <dd>
                 <ul>
-                    <li><a href="#">发布</a></li>
+                    <li><a href="{% url 'deploy:publish' %}">发布</a></li>
                     <li><a href="#">启停</a></li>
                     <li><a href="#">部署历史</a></li>
                 </ul>
