--- a/deploy/templates/deploy/deploy.html
+++ b/deploy/templates/deploy/deploy.html
@@ -33,7 +33,8 @@
         </span>
         <span class="label label-primary radius" id="id_deploy_no"
               deploy_no="{{ deploy_no }}" mablog_url="{{ mablog_url }}">
-            <a href="{{ mablog_url }}/wslog/log_show/?app_name={{ app_name }}&deploy_version={{ deploy_version }}&operation_no={{ deploy_no }}&env_name=Demo" target="_blank">
+            <a href="{{ mablog_url }}/wslog/log_show/?app_name={{ app_name }}&deploy_version={{ deploy_version }}&operation_no={{ deploy_no }}&env_name=Demo"
+               target="_blank">
                 部署日志:{{ deploy_no }}
             </a>
         </span>
@@ -43,67 +44,65 @@
 <br>
 <form action="" method="post" name="serverForm" id="serverForm">
     <table class="table table-border table-bordered table-bg">
-    <thead>
-    <th>
-        <input type="checkbox" name="SelectAllServer">
-        SaltStack minion名称
-    </th>
-    <th>IP地址</th>
-    <th>端口</th>
-    <th>应用名称</th>
-    <th>环境</th>
-    <th>当前版本</th>
-    <th>发布状态</th>
-    <th>用户</th>
-    <th>时间</th>
-    </thead>
-    <tbody>
-    {% for item in object_list %}
-    <tr class="text-l">
-        <td>
-            <input type="checkbox" name="serverSelect" value="{{ item.id }}">
-            {{ item.salt_name }}
-        </td>
-        <td>{{ item.ip_address }}</td>
-        <td>{{ item.port }}</td>
-        <td>{{ item.app_name }}</td>
-        <td>{{ item.env_name }}</td>
-        <td>
-            {% ifequal deploy_version item.histroy_deploy|slice:"0:18" %}
-            <span class="label label-success radius">
+        <thead>
+        <th>
+            <input type="checkbox" name="SelectAllServer">
+            SaltStack minion名称
+        </th>
+        <th>IP地址</th>
+        <th>端口</th>
+        <th>应用名称</th>
+        <th>环境</th>
+        <th>当前版本</th>
+        <th>发布状态</th>
+        <th>用户</th>
+        <th>时间</th>
+        </thead>
+        <tbody>
+        {% for item in object_list %}
+        <tr class="text-l">
+            <td>
+                <input type="checkbox" name="serverSelect" value="{{ item.id }}">
+                {{ item.salt_name }}
+            </td>
+            <td>{{ item.ip_address }}</td>
+            <td>{{ item.port }}</td>
+            <td>{{ item.app_name }}</td>
+            <td>{{ item.env_name }}</td>
+            <td>
+                {% ifequal deploy_version item.histroy_deploy|slice:"0:18" %}
+                <span class="label label-success radius">
                 {{ item.history_deploy|slice:"0:18" }}
             </span>
-            {% else %}
-            <span class="label label-danger radius">
+                {% else %}
+                <span class="label label-danger radius">
                 {{ item.history_deploy|slice:"0:18" }}
             </span>
-            {% endifequal %}
-        </td>
-
-        <td>{{ item.deploy_status }}</td>
-        <td>{{ item.op_user }}</td>
-        <td>{{ item.change_date }}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
-</form>
-<br>
-{% if has_right %}
-<div class="text-l">
-    <input type="text" name="operation_type" value="deploy" hidden/>
-    <input type="text" name="deploy_version" value="{{ deploy_version }}" hidden/>
-    <input type="text" name="env" value="{{ env }}" hidden/>
-    <input type="text" name="app_name" value="{{ app_name }}" hidden/>
-    <span class="select-box inline l">
+                {% endifequal %}
+            </td>
+            <td>{{ item.deploy_status }}</td>
+            <td>{{ item.op_user }}</td>
+            <td>{{ item.change_date }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <br>
+    {% if has_right %}
+    <div class="text-l">
+        <input type="text" name="operation_type" value="deploy" hidden/>
+        <input type="text" name="deploy_version" value="{{ deploy_version }}" hidden/>
+        <input type="text" name="env" value="{{ env }}" hidden/>
+        <input type="text" name="app_name" value="{{ app_name }}" hidden/>
+        <span class="select-box inline l">
         <select name="sp_type" id="sp_select" class="select"
                 onchange="getParallelOption(this.value)">
             <option selected value="serial_deploy">串行</option>
             <option value="parallel_deploy">并行</option>
         </select>
     </span>
-    <span class="select-box inline l">
-        <select name="is-restart-server" id="is-restart-server" class="select">
+        <span class="select-box inline l">
+        <select name="is_restart_server" id="is_restart_server" class="select">
             {% ifequal is_restart_status True %}
             <option selected value="restart">重启服务</option>
             <option value="norestart">禁止重启</option>
@@ -114,7 +113,7 @@
             {% endifequal %}
         </select>
     </span>
-    <span class="select-box inline l">
+        <span class="select-box inline l">
         <select class="select" name="deploy_type" id="deploy_type">
             {% ifequal deploy_type "deployall" %}
             <option selected value="deployall">发布所有</option>
@@ -128,16 +127,17 @@
             <option value="rollback">回滚</option>
         </select>
     </span>
-    <span>
+        <span>
         <button class="btn btn-danger radius" id="btn-deploy">立即部署</button>
     </span>
-</div>
-{% else %}
-<div class="Huialert Huialert-error">
-    <i class="Hui-iconfont">&#xe6a6;</i>
-    你没有{{ app_name }}的{{ env }}环境的发布权限，请联系该应用管理员:{{ admin_user }}
-</div>
-{% endif %}
+    </div>
+    {% else %}
+    <div class="Huialert Huialert-error">
+        <i class="Hui-iconfont">&#xe6a6;</i>
+        你没有{{ app_name }}的{{ env }}环境的发布权限，请联系该应用管理员:{{ admin_user }}
+    </div>
+    {% endif %}
+</form>
 {# pagination #}
 <div class="text-r">
     <ul>
@@ -168,7 +168,7 @@
     </ul>
 </div>
 <sytle>
-#deploylogout{
+    #deploylogout{
     padding:10px;
     background-color:#FF2200;
     color:#FFFFFF;
@@ -181,7 +181,7 @@
     left:50%;
     margin-left:-300px;
     margin-top:-150px;
-}
+    }
 </sytle>
 <div id="deploylogout">
     日志输出:
@@ -198,5 +198,6 @@
 {% block script %}
 <script>
 {% include "deploy/deploy.js" %}
+
 </script>
 {% endblock %}
