--- a/deploy/templates/deploy/operate_app.html
+++ b/deploy/templates/deploy/operate_app.html
@@ -7,36 +7,14 @@
         <span class="label label-primary radius" id="id_app_name" app_name="{{ app_name }}">
             {{ app_name }}
         </span>
-        <span class="label label-primary radius" id="id_deploy_version" deploy_version="{{ deploy_version }}">
-            {{ deploy_version }}
-        </span>
         <span class="label label-primary radius" id="id_env" env="{{ env }}">
             {{ env }}
         </span>
-        <span class="label label-primary radius">
-            {% ifequal item.is_inc_tot "TOT" %}
-                全量部署
-            {% endifequal %}
-            {% ifequal item.is_inc_tot "INC" %}
-                增量部署
-            {% endifequal %}
-        </span>
-        <span class="label label-primary radius">
-            {% ifequal item.deploy_type "deployall" %}
-                程序及配置
-            {% endifequal %}
-            {% ifequal item.deploy_type "deploypkg" %}
-                程序
-            {% endifequal %}
-            {% ifequal item.deploy_type "deploycfg" %}
-                配置
-            {% endifequal %}
-        </span>
-        <span class="label label-primary radius" id="id_deploy_no"
-              deploy_no="{{ deploy_no }}" mablog_url="{{ mablog_url }}">
-            <a href="{{ mablog_url }}/wslog/log_show/?app_name={{ app_name }}&deploy_version={{ deploy_version }}&operation_no={{ deploy_no }}&env_name=Demo"
+        <span class="label label-primary radius" id="id_op_log_no" op_log_no="{{ op_log_no }}"
+              mablog_url="{{ mablog_url }}">
+            <a href="{{ mablog_url }}/wslog/log_show/?app_name={{ app_name }}&deploy_version=Demo&operation_no={{ op_log_no }}&env_name={{ env }}"
                target="_blank">
-                部署日志:{{ deploy_no }}
+                部署日志:{{ op_log_no }}
             </a>
         </span>
     </span>
@@ -54,8 +32,6 @@
         <th>端口</th>
         <th>应用名称</th>
         <th>环境</th>
-        <th>当前版本</th>
-        <th>发布状态</th>
         <th>用户</th>
         <th>时间</th>
         </thead>
@@ -70,18 +46,6 @@
             <td>{{ item.port }}</td>
             <td>{{ item.app_name }}</td>
             <td>{{ item.env_name }}</td>
-            <td>
-                {% ifequal deploy_version item.histroy_deploy|slice:"0:18" %}
-                <span class="label label-success radius">
-                {{ item.history_deploy|slice:"0:18" }}
-            </span>
-                {% else %}
-                <span class="label label-danger radius">
-                {{ item.history_deploy|slice:"0:18" }}
-            </span>
-                {% endifequal %}
-            </td>
-            <td>{{ item.deploy_status }}</td>
             <td>{{ item.op_user }}</td>
             <td>{{ item.change_date }}</td>
         </tr>
@@ -91,51 +55,33 @@
     <br>
     {% if has_right %}
     <div class="text-l">
-        <input type="text" name="operation_type" value="deploy" hidden/>
+        <input type="text" name="operation_type" value="operate" hidden/>
         <input type="text" name="deploy_version" value="{{ deploy_version }}" hidden/>
         <input type="text" name="env" value="{{ env }}" hidden/>
         <input type="text" name="app_name" value="{{ app_name }}" hidden/>
         <span class="select-box inline l">
-        <select name="sp_type" id="sp_select" class="select"
-                onchange="getParallelOptions(this.value)">
-            <option selected value="serial_deploy">串行</option>
-            <option value="parallel_deploy">并行</option>
-        </select>
-    </span>
+            <select name="sp_type" id="sp_select" class="select"
+                    onchange="getParallelOptions(this.value)">
+                <option selected value="serial_deploy">串行</option>
+                <option value="parallel_deploy">并行</option>
+            </select>
+        </span>
         <span class="select-box inline l">
-        <select name="is_restart_server" id="is_restart_server" class="select">
-            {% ifequal is_restart_status True %}
-            <option selected value="restart">重启服务</option>
-            <option value="norestart">禁止重启</option>
-            {% endifequal %}
-            {% ifequal is_restart_status False %}
-            <option value="restart">重启服务</option>
-            <option selected value="norestart">禁止重启</option>
-            {% endifequal %}
-        </select>
-    </span>
-        <span class="select-box inline l">
-        <select class="select" name="deploy_type" id="deploy_type">
-            {% ifequal deploy_type "deployall" %}
-            <option selected value="deployall">发布所有</option>
-            {% endifequal %}
-            {% ifequal deploy_type "deploypkg" %}
-            <option selected value="deploypkg">发布程序</option>
-            {% endifequal %}
-            {% ifequal deploy_type "deploycfg" %}
-            <option selected value="deploycfg">发布配置</option>
-            {% endifequal %}
-            <option value="rollback">回滚</option>
-        </select>
-    </span>
+            <select class="select" name="deploy_type" id="deploy_type">
+                <option value="">请选择</option>
+                <option value="restart">重启</option>
+                <option value="start">启动</option>
+                <option value="stop">停止</option>
+            </select>
+        </span>
         <span>
-        <button class="btn btn-danger radius" id="btn-deploy">立即部署</button>
+        <button class="btn btn-danger radius" id="btn-operate">立即操作</button>
     </span>
     </div>
     {% else %}
     <div class="Huialert Huialert-error">
         <i class="Hui-iconfont">&#xe6a6;</i>
-        你没有{{ app_name }}的{{ env }}环境的发布权限，请联系该应用管理员:{{ admin_user }}
+        你没有操作权限，请联系该应用管理员:{{ admin_user }}
     </div>
     {% endif %}
 </form>
@@ -192,13 +138,12 @@
             关闭
         </button>
     </span>
-        <iframe src="" id="iframe_log" width="800px" height="400"></iframe>
+    <iframe src="" id="iframe_log" width="800px" height="400"></iframe>
 </div>
 {% endblock %}
 
 {% block script %}
 <script>
 {% include "deploy/deploy.js" %}
-
 </script>
 {% endblock %}
