add images of project display

--- a/deploy/templates/deploy/list_history.html
+++ b/deploy/templates/deploy/list_history.html
@@ -25,7 +25,7 @@
     <tr class="text-l">
         <td>
             <span data-toggle="tooltip" data-placement="bottom">
-                <a href="{% url 'deploy:detail' pk=item.deploy_name.id %}">
+                <a href="{% url 'deploy:detail' pk=item.deploy_name_id %}">
                 {{ item.deploy_name }}
                 </a>
             </span>
